tests/specs/check/ts_suppression_unresolved_import/ts_ignore_multiline.out
TS2307 [ERROR]: Cannot find module 'missing-package' or its corresponding type declarations.
} from "missing-package";
       ~~~~~~~~~~~~~~~~~
    at file:///[WILDLINE]/ts_ignore_multiline.ts:5:8

error: Type checking failed.
