tests/specs/check/ts_suppression_unresolved_import/ts_ignore_multiline.ts
// @ts-ignore
import {
  value,
} from "missing-package";

console.log(value);
